miniextendr-macros/tests/ui/derive_altrep_list_rejects_dataptr.stderr
error: `dataptr` is not supported for AltrepList
 --> tests/ui/derive_altrep_list_rejects_dataptr.rs:6:10
  |
6 | #[altrep(dataptr)]
  |          ^^^^^^^
