miniextendr-macros/tests/ui/derive_altrep_list_rejects_dataptr.rs
//! Test: ALTREP list rejects dataptr option.

use miniextendr_macros::AltrepList;

#[derive(AltrepList)]
#[altrep(dataptr)]
struct MyData {
    len: usize,
}

fn main() {}
